--- a/OGDMovies.Web/Views/Home/Index.cshtml
+++ b/OGDMovies.Web/Views/Home/Index.cshtml
@@ -1,3 +1,131 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@model OGDMovies.Common.Models.AggregatedModel
+
+<link href="~/Content/heroic-features.css" rel="stylesheet" />
+<link href="~/Content/overflowBlock.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!-- Page Content -->
+<div class="container">
+    <!-- Jumbotron Header -->
+    <header class="jumbotron hero-spacer">
+        <h1>A Warm Welcome!</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
+        <p>
+            <a class="btn btn-primary btn-large">Call to action!</a>
+        </p>
+    </header>
+
+    <!-- Title -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h3>Top Five Movies</h3>
+        </div>
+    </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" style="">
+            @{
+                var counter = 0;
+                foreach (var movie in Model.MovieResults.Take(5))
+                {
+                    var active = counter > 0 ? "" : "active";
+                    <div class="item @active" align="center">
+                        <img src="@movie.ImageBackdropUrl" alt="@movie.Title" class="img-responsive">
+                        <div class="carousel-caption">
+                            <h3>@movie.Title</h3>
+                        </div>
+                    </div>
+                    counter++;
+                }
+            }
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <hr>
+    <!-- Title -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h3>Latest on Youtube</h3>
+        </div>
+    </div>
+    <!-- /.row -->
+    <!-- Page Features -->
+    @{
+        var topFourYoutube = Model.YoutubeResults.Take(4).ToList();
+    }
+    <div class="row text-center">
+        <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="thumbnail">
+                <img src="@topFourYoutube[0].ImageUrl" alt="">
+                <div class="caption">
+                    <h4 class="block-with-text" style="height: 20px" >@topFourYoutube[0].Title</h4>
+                    <p class="block-with-text">@topFourYoutube[0].Description</p>
+                    <p>
+                        <a href="#" class="btn btn-primary">More Info</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="thumbnail">
+                <img src="@topFourYoutube[1].ImageUrl" alt="">
+                <div class="caption">
+                    <h4 class="block-with-text" style="height: 20px" >@topFourYoutube[1].Title</h4>
+                    <p class="block-with-text" >@topFourYoutube[1].Description</p>
+                    <p>
+                        <a href="#" class="btn btn-primary">More Info</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="thumbnail">
+                <img src="@topFourYoutube[2].ImageUrl" alt="">
+                <div class="caption">
+                    <h4 class="block-with-text" style="height: 20px" >@topFourYoutube[2].Title</h4>
+                    <p class="block-with-text" >@topFourYoutube[2].Description</p>
+                    <p>
+                        <a href="#" class="btn btn-primary">More Info</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="thumbnail">
+                <img src="@topFourYoutube[3].ImageUrl" alt="">
+                <div class="caption">
+                    <h4 class="block-with-text" style="height: 20px" >@topFourYoutube[3].Title</h4>
+                    <p class="block-with-text" >@topFourYoutube[3].Description</p>
+                    <p>
+                        <a href="#" class="btn btn-primary">More Info</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.row -->
+</div>
+<!-- /.container -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
