--- a/OGDMovies.Web/Content/overflowBlock.css
+++ b/OGDMovies.Web/Content/overflowBlock.css
@@ -1,8 +1,10 @@
 ﻿.tmb {
     overflow: hidden;
     position: relative;
+    /*min-height: 1em;*/
+    min-width: 8em;
     max-height: 20em;
-    text-align: center;
+    max-width: 18em;
 }
 
 
