--- a/OGDMovies.Web/Views/Home/_GridList.cshtml
+++ b/OGDMovies.Web/Views/Home/_GridList.cshtml
@@ -4,14 +4,18 @@
     string link = Model.ImageUrl;
     if (Model.Type == ThumbnailType.Youtube)
     {
-        link = $"https://www.youtube.com/watch?v={Model.Id}";
+        link = $"https://www.youtube.com/embed/{Model.Id}";
+    }
+    else
+    {
+        link = Model.ImageUrl;
     }
 }
 <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6 thumb">
     <div class="panel panel-default">
-        <div class="panel-body">
-            <a href="#" data-toggle="modal" data-target="#myModal" style="height: 150px">
-                <img src="@Model.ImageUrl" class="img-responsive thumbnail tmb" alt="@Model.Title" style="width: 90%; ">
+        <div class="panel-body" style="text-align: center; align-content: center;">
+            <a href="#" data-toggle="modal" data-target="#myModal" style="height: 150px;" onclick="onModalClick('@Model.ToJson()', '@link')">
+                <img src="@Model.ImageUrl" class="thumbnail tmb" alt="@Model.Title" style="width: 90%; ">
                 <div class="caption">
                     <a href="#" title="@Model.Title" data-toggle="popover" data-trigger="focus" data-content="@Model.Description">
                         <p class="block-with-text" style="height: 18px">@Model.Title</p>
