--- a/OGDMovies.Web/Views/Shared/_Layout.cshtml
+++ b/OGDMovies.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using OGDMovies.Common.Enums
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -44,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("OGD Movie Database", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @LinkExtensions.ActionLink(Html, "OGD Movie Database", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div id="topnav" class="navbar-collapse collapse">
                 <div class="search-container" >
@@ -53,12 +55,17 @@
                         <button type="submit"><i class="fa fa-search"></i></button>
                     </form>
                 </div>
-                    <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Popular", "Popular", "Home")</li>
-                        <li>@Html.ActionLink("Top Rated", "TopRated", "Home")</li>
-                        <li>@Html.ActionLink("Trending", "Trending", "Home")</li>
-                        <li>@Html.ActionLink("Upcomming", "Upcomming", "Home")</li>
-                    </ul>
+                <ul class="nav navbar-nav">
+                    @{
+                        //Dynamicaly add navigation links based on Enum
+                        foreach (var movieRelevance in Enum.GetNames(typeof(MovieRelevance)))
+                        {
+                            Enum.TryParse(movieRelevance, out MovieRelevance _enum);
+                            
+                            <li>@LinkExtensions.ActionLink(Html, CustomEnumHelper.DisplayNameFor(_enum), $"Relevance", new { relevance = movieRelevance })</li>
+                        }
+                    }
+                </ul>
             </div>
         </div>
     </div>
