--- a/OGDMovies.Web/Views/Home/Index.cshtml
+++ b/OGDMovies.Web/Views/Home/Index.cshtml
@@ -11,10 +11,7 @@
 <div class="container">
     <header class="jumbotron hero-spacer">
         <h1>A Warm Welcome!</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
-        <p>
-            <a class="btn btn-primary btn-large">Call to action!</a>
-        </p>
+        <p>Here you will find info on the leatest and trending movies. Feel free to browse and search for you favourite movies and videos.</p>
     </header>
 
     <div class="row">
