--- a/OGDMovies.Web/Views/Shared/_Layout.cshtml
+++ b/OGDMovies.Web/Views/Shared/_Layout.cshtml
@@ -57,8 +57,8 @@
                 </div>
                 <ul class="nav navbar-nav">
                     @{
-                        //Dynamicaly add navigation links based on Enum
-                        foreach (var movieRelevance in Enum.GetNames(typeof(MovieRelevance)))
+                        //Dynamicaly add navigation links based on Enum. Show all except search
+                        foreach (var movieRelevance in Enum.GetNames(typeof(MovieRelevance)).Where(s=>s.ToLower() != "search"))
                         {
                             Enum.TryParse(movieRelevance, out MovieRelevance _enum);
                             
