--- a/OGDMovies.Web/Views/Shared/_Layout.cshtml
+++ b/OGDMovies.Web/Views/Shared/_Layout.cshtml
@@ -67,12 +67,9 @@
                         }
                     }
                     <li style="padding: 12px">
-                        <div class="fb-login-button"
-                             data-max-rows="1"
-                             data-size="medium"
-                             data-width="20"
-                             data-button-type="continue_with"
-                             data-use-continue-as="true"></div>
+                        <div class="fb-login-button" data-max-rows="1" data-size="medium"
+                             data-button-type="login_with" data-show-faces="false"
+                             data-auto-logout-link="false" data-use-continue-as="true"></div>
                     </li>
                 </ul>
 
@@ -91,41 +88,102 @@
         (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src =
-                'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=2175976735978710&autoLogAppEvents=1';
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&autoLogAppEvents=1&version=v3.2&appId=2175976735978710';
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
+    <script>
+        // This is called with the results from from FB.getLoginStatus().
+        function statusChangeCallback(response) {
+            console.log('statusChangeCallback');
+            console.log(response);
+            // The response object is returned with a status field that lets the
+            // app know the current login status of the person.
+            // Full docs on the response object can be found in the documentation
+            // for FB.getLoginStatus().
+            if (response.status === 'connected') {
+                // Logged into your app and Facebook.
+                testAPI();
+            } else {
+                // The person is not logged into your app or we are unable to tell.
+                document.getElementById('status').innerHTML = 'Please log ' +
+                    'into this app.';
+            }
+        }
 
+        // This function is called when someone finishes with the Login
+        // Button.  See the onlogin handler attached to it in the sample
+        // code below.
+        function checkLoginState() {
+            FB.getLoginStatus(function (response) {
+                statusChangeCallback(response);
+            });
+        }
+
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '2175976735978710',
+                cookie: true,  // enable cookies to allow the server to access
+                // the session
+                xfbml: true,  // parse social plugins on this page
+                version: 'v2.8' // use graph api version 2.8
+            });
+
+            // Now that we've initialized the JavaScript SDK, we call
+            // FB.getLoginStatus().  This function gets the state of the
+            // person visiting this page and can return one of three states to
+            // the callback you provide.  They can be:
+            //
+            // 1. Logged into your app ('connected')
+            // 2. Logged into Facebook, but not your app ('not_authorized')
+            // 3. Not logged into Facebook and can't tell if they are logged into
+            //    your app or not.
+            //
+            // These three cases are handled in the callback function.
+
+            FB.getLoginStatus(function (response) {
+                statusChangeCallback(response);
+            });
+
+        };
+
+        // Here we run a very simple test of the Graph API after login is
+        // successful.  See statusChangeCallback() for when this call is made.
+        function testAPI() {
+            console.log('Welcome!  Fetching your information.... ');
+            FB.api('/me', function (response) {
+                console.log('Successful login for: ' + response.name);
+            });
+        }
+    </script>
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/facebook")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js "></script>
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
-    <script>
-        var requestHeaders = {
-            "accept": "application/json;odata=verbose"
-        }
-        $("#search").autocomplete({
-            source: function (request, response) {
-                $.ajax({
-                    dataType: 'json',
-                    async: true,
-                    headers: requestHeaders,
-                    url: '@Url.Action("AutoCompleteMovieTitles", "Home")',
-                    data: {
-                        query: request.term
-                    },
-                    success: function (data) {
-                        response(data);
-                    }
-                });
-            },
-            minLength: 3
-        });
+    <script type="text/javascript">
+    var requestHeaders = {
+        "accept": "application/json;odata=verbose"
+    }
+    $("#search").autocomplete({
+        source: function (request, response) {
+            $.ajax({
+                dataType: 'json',
+                async: true,
+                headers: requestHeaders,
+                url: '@Url.Action("AutoCompleteMovieTitles", "Home")',
+                data: {
+                    query: request.term
+                },
+                success: function (data) {
+                    response(data);
+                }
+            });
+        },
+        minLength: 3
+    });
     </script>
+
 </body>
 </html>
